<resources>
    <string name="app_name">Practica2R</string>
    <string name="tvTitulo">Practica 02 Pasando Informacion</string>
    <string name="tvInfo">Elige que tipo de informacion quieres que le de</string>
    <string name="rbOp1">Opcion 1- Libros</string>
    <string name="rbOp2">Opcion 2 - Musica</string>
    <string name="rbOp3">Opcion 3 - Peliculas</string>
    <string name="swImagen" />
    <string name="tvImagen">Ver Imagen?</string>
    <string name="btnExit">Me marcho</string>
    <string name="btnExit">Me marcho</string>
</resources>
