<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:text="@string/tvTitulo" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvInfo"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintVertical_bias="0.07999998" />

    <RadioGroup
        android:id="@+id/rgOpciones"
        android:layout_width="185dp"
        android:layout_height="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfo"
        app:layout_constraintVertical_bias="0.24000001">

        <RadioButton
            android:id="@+id/rbOp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbOp1" />

        <RadioButton
            android:id="@+id/rbOp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbOp2" />

        <RadioButton
            android:id="@+id/rbOp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbOp3" />
    </RadioGroup>

    <Switch
        android:id="@+id/swImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Pulsaciones"
        android:text="@string/swImagen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgOpciones"
        app:layout_constraintVertical_bias="0.26" />

    <TextView
        android:id="@+id/tvImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvImagen"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgOpciones"
        app:layout_constraintVertical_bias="0.26" />

    <ImageButton
        android:id="@+id/ibNext"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="Pulsaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swImagen"
        app:srcCompat="@android:drawable/ic_media_ff" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:onClick="Pulsaciones"
        android:text="@string/btnExit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibNext"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>